--- a/src/sass/base/_color.scss
+++ b/src/sass/base/_color.scss
@@ -1,3 +1,13 @@
 $bodyColor :#252735;
 $componentColor:#2a3142;
 $textColor:#9ca8b3;
+
+//Colors
+$success:#02a499;
+$info:#38a4f8;
+$primary:#626ed4;
+$warning:#f8b425;
+$danger:#ec4561;
+$secondary:#e2e3e5;
+$light:#fefefe;
+$dark:#d6d8d9;
